# delty

./: .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cron.sh  docker-compose-prod.yml  docker-compose.yml  init-s3-bucket.sh  mypy.ini  pyproject.toml  pytest.ini  report.xml
.github/workflows/: cd.yml  ci.yml  test.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: track_content_diff_dag.py  track_element_diff_dag.py
app/: asgi.py  env.py  s3.py  settings.py  urls.py  wsgi.py
app/settings/: base.py  default.py  local.py  test.py
app/settings/extras/: dramatiq.py  grpc.py  logging.py  s3.py
delty/: admin.py  apps.py  constants.py  errors.py  exceptions.py  models.py  tasks.py  urls.py  utils.py
delty/actions/: check_address_crawlability.py  fetch_address_response.py  initiate_element_crawling.py  track_content_difference.py  track_difference.py
delty/actions/common/: __init__.py  fetch_response.py
delty/clients/: web_client.py
delty/forms/: adress.py  auth.py  crawling_submission.py
delty/grpc/: server.py
delty/management/commands/: run_grpc_server.py  track_content_difference.py  track_element_diff.py
delty/migrations/: 0001_initial.py  0002_alter_selectedelement_hash.py  0003_remove_pagesnapshot_content_and_more.py  0004_alter_urladdress_url.py  0005_remove_crawlingjob_selected_element_and_more.py  0006_alter_elementsnapshot_diff.py  0007_elementsnapshot_crawling_job.py  0008_crawlingjob_selector_and_more.py  0009_elementsnapshot_content_path.py  0010_crawlingjob_iframe_height_crawlingjob_iframe_width_and_more.py  0011_alter_elementsnapshot_crawling_job.py  0012_remove_elementsnapshot_content_and_diff.py
delty/models/: __init__.py  base.py  crawling_job.py  element_snapshot.py  page_snapshot.py  url_address.py
delty/services/: crawler.py  dom_processor.py  storage.py
delty/templates/: base.html  crawling.html  index.html  login.html  register.html
delty/tests/: utils.py
delty/tests/actions/: test_track_difference.py
delty/tests/factories/: crawling_job.py  element_snapshot.py  user.py  (+2 more)
delty/views/: auth.py  crawler.py  index.py  mixins.py
logfmt/: filters.py  formatter.py
system/scripts/: airflow.sql
system_scripts/: init.sql
(+6 files in other folders)
