[tool.poetry]
name = "delty"
version = "0.1.0"
description = ""
authors = ["Dimitris Orfanoudakis <dimitrisorfanudakis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.5"
django = "^5.0.6"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
django-crispy-forms = "^2.2"
crispy-bootstrap5 = "^2024.2"
django-redis = "^5.4.0"
django-database-url = "^1.0.3"
pre-commit = "^3.7.1"
mypy = "^1.10.1"
types-requests = "^2.32.0.20240622"
diff-match-patch = "^20230430"
boto3 = "^1.34.140"
django-storages = "^1.14.3"
psycopg2-binary = "^2.9.9"
logfmt = "^0.4"
factory-boy = "^3.3.0"
pytest = "^8.3.2"
playwright = "^1.45.1"
dramatiq = "^1.17.0"
django-dramatiq = "^0.11.6"
dramatiq-dashboard = "^0.4.0"
wsgi-basic-auth = "^1.1.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "app.settings"
